--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body data-spy="scroll" data-target=".navbar" data-offset="51">
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
-      <a href="#home" class="navbar-brand ml-lg-3"><img src="img/about/logo.png" alt="logo" /></a>
+      <a href="#home" class="navbar-brand ml-lg-3"><img src="img/about/logo1.png" alt="logo" /></a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
