--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Free HTML Templates" name="keywords" />
     <meta content="Free HTML Templates" name="description" />
-    <link rel="icon" type="image/x-icon" href="img/about/logo.png">
+    <link rel="icon" type="image/x-icon" href="img/backgrounds/logo1.png">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
